# smart_huajuan

./: .dockerignore  Dockerfile  EXAMPLES.md  Makefile  README.md  dissertation_example.py  dissertation_full_translation_1.md  dissertation_full_translation_3.md  dissertation_sample_translation.md  dogfood_test.py  milestone3_plan.md  milestone_status.md  process_dissertation.py  pyproject.toml  test_10_chunks.py  test_10_chunks_output.md  test_anthropic_translation.py  test_quick_translation.py  test_simple_translate.py  test_single_chunk.py  test_translate_dissertation.py
.claude/: settings.local.json
.github/workflows/: ci.yml
aat/: __main__.py  cli.py  runtime_paths.py
aat/export/: __init__.py  chapter.py  docx_export.py  global_pass.py  quality_report.py
aat/orchestrator/: __init__.py  chapter_summary.py  context_assembler.py  hierarchical_loop.py  style_guide.py
aat/parsing/: citation.py  docx_parser.py
aat/retrieval/: __init__.py  cache.py  grounding.py  ingestion.py  openalex.py
aat/storage/: checkpoints.py  models.py
aat/translate/: __init__.py  chapter_detector.py  feedback.py  llm_client.py  pipeline.py  prompts.py  quality.py  segmenter.py  translation_memory.py  validators.py
aat/ui/: server.py
checkpoints/: checkpoint_2026-02-27T11-02-22-139567.json  checkpoint_2026-02-27T11-02-53-607873.json  checkpoint_2026-02-27T11-03-39-712741.json  checkpoint_2026-02-27T11-04-31-644278.json  checkpoint_2026-02-27T11-05-04-281154.json  checkpoint_2026-02-27T11-05-27-753736.json  checkpoint_2026-02-27T11-06-08-868190.json  checkpoint_2026-02-27T11-07-05-751497.json  checkpoint_2026-02-27T11-07-45-077269.json  checkpoint_2026-02-27T11-07-45-085840.json
specs/: aat_translation_improvement_plan.md  academic_translator_prd.md  code_review_fixes.md  dissertation_execution_plan.md  docker_container_image_plan.md  human_feedback_plan.md  m6_global_pass_export_plan.md  option_c_quality_improvements_plan.md  option_d_web_ui_plan.md
tests/: test_cli.py  test_llm_client.py  test_pipeline.py  test_prompts.py  test_runtime_paths.py  test_validators.py
tests/fixtures/: create_fixtures.py  paper_citations.docx  paper_minimal.docx  paper_numbers.docx  paper_references.docx
tests/test_anthropic/: __init__.py  test_anthropic_client.py
tests/test_export/: test_quality_report.py
tests/test_milestone3/: __init__.py  test_chapter_export.py  test_resume.py
tests/test_milestone4/: test_chapter_summary.py  test_context_assembler.py  (+2 more)
(+28 files in other folders)
